[gd_scene load_steps=4 format=3 uid="uid://ua3o7djnmsx7"]

[ext_resource type="Script" path="res://scripts/metrics_gui.gd" id="1_rp8y5"]
[ext_resource type="Texture2D" uid="uid://bu13qkjs6naa4" path="res://resources/circle.png" id="2_3eddn"]
[ext_resource type="Texture2D" uid="uid://dk4287elymw75" path="res://resources/truenasmonitor.jpeg" id="3_i8x1r"]

[node name="MetricsGui" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rp8y5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 671.0
mouse_filter = 2
texture = ExtResource("3_i8x1r")
expand_mode = 3

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = -2.0
offset_right = 1204.0
offset_bottom = 675.0
mouse_filter = 2
color = Color(0.278431, 0.309804, 0.345098, 0.752941)

[node name="SendRequest" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 38.0
offset_right = 100.0
offset_bottom = 69.0
text = "Server Request"

[node name="SendRequestDirect" type="Button" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 38.0
offset_right = 290.0
offset_bottom = 69.0
text = "Direct Request"

[node name="RequestURL" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 80.0
offset_right = 547.0
offset_bottom = 111.0
text = "http://localhost:9090/metrics"

[node name="Reply" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 122.0
offset_right = 537.0
offset_bottom = 335.0
placeholder_text = "Reply..."
editable = false

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 562.0
offset_top = 172.0
offset_right = 692.0
offset_bottom = 300.0
max_value = 1.0
step = 0.01
value = 0.75
fill_mode = 4
texture_under = ExtResource("2_3eddn")
texture_progress = ExtResource("2_3eddn")
tint_under = Color(0.212305, 0.212305, 0.212305, 1)
tint_progress = Color(0.160784, 0.819608, 0.129412, 1)

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
